--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="page">
             <div>
-                <form action="" method="post" id="test_form" data-request-type="form-data">
+                <form action="success.json" method="post" id="test_form">
                     <div class="input-text">
                         <label for="i1"><span>Name</span> <span class="required">Required</span></label>
                         <input type="text" id="i1" name="name" placeholder="Enter your name">
