--- a/demo/index.html
+++ b/demo/index.html
@@ -6,12 +6,12 @@
 
         <script src="../events-container.js"></script>
         <script src="../jquery-3.6.3.min.js"></script>
-        <script src="../jquery.ajax-form.js?"></script>
+        <script src="../jquery.ajax-form.js"></script>
     </head>
     <body>
         <div class="page">
             <div>
-                <form action="success.json" method="post" id="test_form_1">
+                <form action="success.txt" method="post" id="test_form_1">
                     <h1>With a pre-check</h1>
                     <div class="input-text">
                         <label for="i1"><span>Name</span> <span class="required">Required</span></label>
