--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="page">
             <div>
-                <form action="success.txt" method="post" id="test_form_1">
+                <form action="success.html" method="post" id="test_form_1">
                     <h1>With a pre-check</h1>
                     <div class="input-text">
                         <label for="i1"><span>Name</span> <span class="required">Required</span></label>
