--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="page">
             <div>
-                <form action="success.html" method="post" id="test_form_1">
+                <form action="" method="post" id="test_form_1">
                     <h1>With a pre-check</h1>
                     <div class="input-text">
                         <label for="i1"><span>Name</span> <span class="required">Required</span></label>
@@ -58,8 +58,9 @@
                 </form>
                 <script>
                     var form1 = $("#test_form_1").ajaxForm()
-                        .loading(function (sending_form, sending_data) { console.log(sending_data)
-                            if(!sending_form.find("input[name=name]").val().length) return "Введите имя!"
+                        .loading(function (sending_form, sending_data) {
+                            if(!sending_form.find("input[name=name]").val().length) return "Enter a name!"
+                            if(!sending_data.checkbox) return "You need to put a checkbox";
                         })
                         .success(function (data) {
                             console.log("success", data)
@@ -67,6 +68,36 @@
                         .error(function (error_code) {
                             $("#test_form_1").find(".error_block").css("display", "block")
                             $("#test_form_1").find(".error_block > div").html(error_code)
+                        })
+                </script>
+            </div>
+            <div>
+                <form action="" method="post" id="test_form_2" data-request-type="form-data" data-show-progress="true">
+                    <h1>Progress bar</h1>
+                    <div class="input-text">
+                        <label for="f1"><span>File</span> <span class="required">Required</span></label>
+                        <label for="f1" class="select_file">Select file</label>
+                        <input type="file" id="f1" name="file" placeholder="Enter your file" multiple>
+                    </div>
+                    <button type="submit">Submit</button>
+                    <div class="error_block">
+                        <div></div>
+                    </div>
+                </form>
+                <script>
+                    var form2 = $("#test_form_2").ajaxForm()
+                        .loading(function (sending_form, sending_data) {
+                            console.log(sending_data)
+                        })
+                        .success(function (data) {
+                            console.log("success", data)
+                        })
+                        .error(function (error_code) {
+                            $("#test_form_2").find(".error_block").css("display", "block")
+                            $("#test_form_2").find(".error_block > div").html(error_code)
+                        })
+                        .progress(function (percent) {
+                            console.log(percent)
                         })
                 </script>
             </div>
