--- a/demo/index.html
+++ b/demo/index.html
@@ -77,7 +77,7 @@
                     <div class="input-text">
                         <label for="f1"><span>File</span> <span class="required">Required</span></label>
                         <label for="f1" class="select_file">Select file</label>
-                        <input type="file" id="f1" name="file" placeholder="Enter your file" multiple>
+                        <input type="file" id="f1" name="file" placeholder="Enter your file">
                     </div>
                     <button type="submit">Submit</button>
                     <div class="error_block">
