--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="page">
             <div>
-                <form action="http://github-examples.mvc-project.site/Jquery-Ajaxform/check-radios" method="post" id="test_form_1">
+                <form action="https://github-examples.mvc-project.site/Jquery-Ajaxform/check-radios" method="post" id="test_form_1">
                     <h1>With a pre-check</h1>
                     <div class="input-text">
                         <label for="i1"><span>Name</span> <span class="required">Required</span></label>
@@ -106,7 +106,7 @@
                 </script>
             </div>
             <div>
-                <form action="http://github-examples.mvc-project.site/Jquery-Ajaxform/upload-file" method="post" id="test_form_2" data-request-type="form-data" data-show-progress="true">
+                <form action="https://github-examples.mvc-project.site/Jquery-Ajaxform/upload-file" method="post" id="test_form_2" data-request-type="form-data" data-show-progress="true">
                     <h1>Progress bar</h1>
                     <div class="input-text">
                         <label for="f1">File <span class="file-name"></span></label>
